traces/bug_885.txt
src/fflib/lgfem.cpp:4099: error: DEAD_STORE
  The value written to &addtoplot (type _Bool) is never used.
Showing all 1 steps of the trace


src/fflib/lgfem.cpp:4099:18: Write of unused value
4097.     if (nargs[17]) dimplot= GetAny<long>((*nargs[17])(s));
4098.     bool addtoplot=false, keepPV=false;
4099.     if (nargs[18]) addtoplot= GetAny<bool>((*nargs[18])(s));
                         ^
4100.     if (nargs[19]) keepPV= GetAny<bool>((*nargs[19])(s));
4101.     if (nargs[VTK_START+8]) ArrowSize = GetAny<double>((*nargs[VTK_START+8])(s));
